--- a/pom.xml
+++ b/pom.xml
@@ -82,10 +82,14 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
+                            <nowarn>true</nowarn>
                             <sourceDirs>
                                 <sourceDir>src/main/java</sourceDir>
                                 <sourceDir>src/main/kotlin</sourceDir>
                             </sourceDirs>
+                            <args>
+                                <arg>-Xnew-inference</arg>
+                            </args>
                         </configuration>
                     </execution>
                     <execution>
@@ -95,15 +99,29 @@
                             <goal>test-compile</goal>
                         </goals>
                         <configuration>
+                            <nowarn>true</nowarn>
                             <sourceDirs>
                                 <sourceDir>src/test/java</sourceDir>
                                 <sourceDir>src/test/kotlin</sourceDir>
                             </sourceDirs>
+                            <args>
+                                <arg>-Xnew-inference</arg>
+                            </args>
                         </configuration>
                     </execution>
                 </executions>
                 <configuration>
                     <jvmTarget>1.8</jvmTarget>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.21.0</version>
+                <configuration>
+                    <includes>
+                        <include>**/*</include>
+                    </includes>
                 </configuration>
             </plugin>
         </plugins>
